# agentgate

./: .env.example  .gitignore  LICENSE  Makefile  README.md  agentgate.yaml.example  pyproject.toml
agentgate/: __init__.py  context.py  engine.py  firewall.py  logger.py  models.py
agentgate/analyzers/: filesystem.py  http.py  sql.py
agentgate/interceptors/: langchain.py  openai.py
agentgate/lib/: engine.py  firewall.py  logger.py  models.py
agentgate/lib/analyzers/: filesystem.py  http.py  sql.py
agentgate/lib/interceptors/: langchain.py  openai.py
agentgate/tests/: test_analyzers.py  test_context.py  test_engine.py  test_firewall.py  test_timing.py
agenttest/: evaluator.py  reporter.py  run_suite.py  runner.py
agenttest/reports/: AGENT_TEST_003_20260401_005029.md  AGENT_TEST_004_20260401_021247.md  AGENT_TEST_005_20260401_044747.md  AGENT_TEST_006_20260401_143750.md  AGENT_TEST_007_20260401_152557.md  AGENT_TEST_20260328_021002.md  AGENT_TEST_20260328_151316.md  AGENT_TEST_20260401_005029.md  AGENT_TEST_20260401_021247.md  AGENT_TEST_20260401_044747.md  AGENT_TEST_20260401_143639.md  AGENT_TEST_20260401_143750.md  AGENT_TEST_20260401_152557.md  latest_raw.json  run_003_raw.json  run_004_raw.json  run_005_raw.json  run_006_raw.json
agenttest/scenarios/: communications.json  data_ops.json  file_ops.json  infrastructure.json
agenttest/scenarios/trajectories/: escalation.json  exfiltration.json  scope_creep.json
examples/demo_agent/: README.md  display.py  run_demo.py  tools.py
redteam/: generate_report.py  generate_report_002.py  run_audit.py
redteam/payloads/: SSRF-combined.txt
redteam/report/: AUDIT_REPORT_001.md  AUDIT_REPORT_002.md  AUDIT_REPORT_003.md
redteam/results/run_001/: baseline_pytest.txt  integration_smoke.json  performance.json  seclist_filesystem.json  seclist_http.json  seclist_sql.json
redteam/results/run_002/: baseline_pytest.txt  performance.json  seclist_filesystem.json  seclist_sql.json  semantic_tier2.json
redteam/results/run_003/: baseline_pytest.txt  performance.json  seclist_filesystem.json  seclist_http.json  seclist_sql.json  tier2_adversarial.json
tests/: test_analyzers.py  test_context.py  test_engine.py  test_firewall.py  test_timing.py
