[project]
name = "agentgate"
version = "0.1.0"
description = "Action-level firewall for AI agents. Protects what agents DO, not what they say."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentGate" }]

dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlparse>=0.5.0",
    "supabase>=2.0.0",
    "openai>=1.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
all = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agentgate/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
